--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -4,13 +4,15 @@
       "id": 1,
       "title": "Project A",
       "subtitle": "This is the subtitle",
-      "description": "This is the description"
+      "description": "This is the description",
+      "imgUrl": "/public/placeholder.jpeg"
     },
     {
       "id": 2,
       "title": "Project B",
       "subtitle": "This is the subtitle",
-      "description": "This is the description"
+      "description": "This is the description",
+      "imgUrl": "/public/placeholder2.jpeg"
     }
   ]  
 }
