set up project two

--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -14,7 +14,7 @@
       "subtitle": "This is the subtitle",
       "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium consequuntur ipsam ratione quas! Similique exercitationem commodi sed deserunt velit, suscipit quas, eveniet, nihil quaerat dicta incidunt reprehenderit a dolorum hic.",
       "imgUrl": "/placeholder2.jpeg",
-      "pageUrl": ""
+      "pageUrl": "/projects/positive-cli"
     }
   ]
 }
