--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -2,16 +2,16 @@
   "projects": [
     {
       "id": 1,
-      "title": "Project A",
-      "subtitle": "This is the subtitle",
+      "heading": "Project A",
+      "subHeading": "This is the subtitle",
       "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium consequuntur ipsam ratione quas! Similique exercitationem commodi sed deserunt velit, suscipit quas, eveniet, nihil quaerat dicta incidunt reprehenderit a dolorum hic.",
       "imgUrl": "/placeholder.jpeg",
       "pageUrl": "/projects/portfolio"
     },
     {
       "id": 2,
-      "title": "Project B",
-      "subtitle": "This is the subtitle",
+      "heading": "Project B",
+      "subHeading": "This is the subtitle",
       "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium consequuntur ipsam ratione quas! Similique exercitationem commodi sed deserunt velit, suscipit quas, eveniet, nihil quaerat dicta incidunt reprehenderit a dolorum hic.",
       "imgUrl": "/placeholder2.jpeg",
       "pageUrl": "/projects/positive-cli"
