--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -17,6 +17,24 @@
       "imgUrl": "/placeholder2.jpeg",
       "pageUrl": "/projects/positive-cli",
       "gitHubUrl": ""
+    },
+    {
+      "id": 3,
+      "heading": "Project C",
+      "subHeading": "This is the subtitle",
+      "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium consequuntur ipsam ratione quas! Similique exercitationem commodi sed deserunt velit, suscipit quas, eveniet, nihil quaerat dicta incidunt reprehenderit a dolorum hic.",
+      "imgUrl": "/placeholder2.jpeg",
+      "pageUrl": "/projects/some-other-project",
+      "gitHubUrl": ""
+    },
+    {
+      "id": 4,
+      "heading": "Project D",
+      "subHeading": "This is the subtitle",
+      "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium consequuntur ipsam ratione quas! Similique exercitationem commodi sed deserunt velit, suscipit quas, eveniet, nihil quaerat dicta incidunt reprehenderit a dolorum hic.",
+      "imgUrl": "/placeholder.jpeg",
+      "pageUrl": "/projects/another-project",
+      "gitHubUrl": ""
     }
   ]
 }
