--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -4,37 +4,51 @@
       "id": 1,
       "heading": "My Portfolio",
       "subHeading": "The source of this website.",
-      "description": "A static website to share my personal projects, built using modern web develoment technologies including React, Vite, Tailwind, and Framer Motion. Deployed on AWS S3 using Terraform.",
+      "description": "A static website for sharing my personal projects. Built React, Vite, Tailwind, and Framer Motion. Deployed on AWS S3 using Terraform.",
       "imgUrl": "/placeholder.jpeg",
       "pageUrl": "/projects/portfolio",
-      "gitHubUrl": "https://github.com/mhborthwick/mhborthwick.com"
+      "gitHubUrl": "https://github.com/mhborthwick/mhborthwick.com",
+      "demoUrl": ""
     },
     {
       "id": 2,
-      "heading": "Project B",
-      "subHeading": "This is the subtitle",
-      "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium consequuntur ipsam ratione quas! Similique exercitationem commodi sed deserunt velit, suscipit quas, eveniet, nihil quaerat dicta incidunt reprehenderit a dolorum hic.",
+      "heading": "Campfire CLI",
+      "subHeading": "Create a campfire in your terminal.",
+      "description": "A (command-line tool) CLI that lets you create a campfire (with optional campfire soundscapes) in your terminal. Built using Python and Typer.",
       "imgUrl": "/placeholder2.jpeg",
       "pageUrl": "/projects/positive-cli",
-      "gitHubUrl": ""
+      "gitHubUrl": "https://github.com/mhborthwick/campfire-cli",
+      "demoUrl": ""
     },
     {
       "id": 3,
-      "heading": "Project C",
-      "subHeading": "This is the subtitle",
-      "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium consequuntur ipsam ratione quas! Similique exercitationem commodi sed deserunt velit, suscipit quas, eveniet, nihil quaerat dicta incidunt reprehenderit a dolorum hic.",
+      "heading": "Connect Four",
+      "subHeading": "A Connect Four implementation in TypeScript.",
+      "description": "A simple Connect Four implementation in TypeScript for local gameplay.",
       "imgUrl": "/placeholder2.jpeg",
-      "pageUrl": "/projects/some-other-project",
-      "gitHubUrl": ""
+      "pageUrl": "/projects/connect-four",
+      "gitHubUrl": "https://github.com/mhborthwick/connect4",
+      "demoUrl": ""
     },
     {
       "id": 4,
-      "heading": "Project D",
-      "subHeading": "This is the subtitle",
-      "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium consequuntur ipsam ratione quas! Similique exercitationem commodi sed deserunt velit, suscipit quas, eveniet, nihil quaerat dicta incidunt reprehenderit a dolorum hic.",
+      "heading": "Lorem INTL",
+      "subHeading": "Quickly add Lorem Ipsum text in multiple languages.",
+      "description": "An NPM package that lets you quickly add Lorem Ipsum text in multiple languages for testing and prototyping.",
       "imgUrl": "/placeholder.jpeg",
-      "pageUrl": "/projects/another-project",
-      "gitHubUrl": ""
+      "pageUrl": "/projects/lorem-intl",
+      "gitHubUrl": "https://github.com/mhborthwick/lorem-intl",
+      "demoUrl": ""
+    },
+    {
+      "id": 5,
+      "heading": "Songbook",
+      "subHeading": "A platform for sharing your favorite songs.",
+      "description": "A full-stack web app where users can listen to songs and share their favorite tracks for future visitors. Built using Next.js, Express, React, Zod, and MongoDB.",
+      "imgUrl": "/placeholder.jpeg",
+      "pageUrl": "/projects/songbook",
+      "gitHubUrl": "https://github.com/mhborthwick/songbook",
+      "demoUrl": "https://songbook.up.railway.app/"
     }
   ]
 }
